# thai-receipt-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: bug1_discount_splice.json  discount_between_items.json  full_features.json  simple.json
scripts/: clean.sh
src/thai_receipt_generator/: calculator.py  cli.py  combinator.py  models.py  renderer.py
src/thai_receipt_generator/templates/: base_macros.html  formal_invoice.html  simple_receipt.html  thermal_pos.html
tests/: test_calculator.py  test_combinator.py
